# mcp_email

./: .env.example  .gitignore  BITRIX24_DEVELOPMENT_PLAN.md  Dockerfile  FOLDER_OPERATIONS_PLAN.md  MCP_STREAMABLE_HTTP.md  PROXY_SETUP.md  README.md  claudecron_deployment_plan.md  deploy-bitrix.sh  deploy-cron.sh  deploy.sh  docker-compose.yml  gmail_organization_plan.md  nginx-mcp-bitrix.conf  nginx-mcp-email.conf  nginx-mcp.conf  pyproject.toml  servers.md  servers_section.md  task.md
bitrix-mcp-server/: Dockerfile  LISTS_IMPLEMENTATION_PLAN.md  TOOLS_CONSOLIDATION_PLAN.md  package-lock.json  package.json
bitrix-mcp-server/src/: index.ts
bitrix-mcp-server/src/services/: bitrix-service.ts
bitrix-mcp-server/src/tools/: checklist-tools.ts  comment-tools.ts  department-tools.ts  extra-tools.ts  group-tools.ts  index.ts  list-tools.ts  status-tools.ts  task-tools.ts  time-tools.ts  user-tools.ts
bitrix-mcp-server/src/types/: bitrix.ts
bitrix-mcp-server/wrapper/bitrix_mcp/: __init__.py  server.py  stdio_bridge.py
cron-mcp-server/: .env.example  NOTIFICATION_PLAN.md  README.md  docker-compose.yml  mcp-servers.yaml.example  pytest.ini
cron-mcp-server/tests/: __init__.py  conftest.py  test_mcp_client.py  test_notifier.py  test_server_integration.py  test_subagent_cli.py  test_subagent_mcp.py  test_subagent_unified.py
cron-mcp-server/wrapper/: Dockerfile  requirements.txt
cron-mcp-server/wrapper/cron_mcp/: __init__.py  mcp_client.py  mcp_registry.py  notifier.py  scheduler.py  (+4 more)
sorting-plans/: README.md
src/email_mcp/: __init__.py  server.py  stdio_bridge.py
(+13 files in other folders)
