[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "email-mcp-server"
version = "3.0.0"
description = "Email MCP Server with Streamable HTTP transport (MCP 2025-11-25)"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Sergey Stetsko"},
]
dependencies = [
    "fastmcp>=2.14.0",
    "mcp>=1.23",
    "aiohttp>=3.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
]

[project.scripts]
email-mcp-server = "email_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/email_mcp"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
